--- a/UnrealFest/views/index.html
+++ b/UnrealFest/views/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html class="background-image-container" lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
 </head>
 
 <body>
@@ -59,16 +57,11 @@
             .background-image-container {
                 background-image: url('/images/background.svg');
                 /* Update the path to your image */
-                background-size: cover;
-                /* Adjust as needed: cover, contain, or specific dimensions */
-                background-repeat: no-repeat;
-                /* Prevent the image from repeating */
+                height: 100%;
+                /* Center and scale the image nicely */
                 background-position: center;
-                /* Center the image */
-                width: 100%;
-                /* Adjust the width as needed */
-                height: 500px;
-                /* Adjust the height as needed */
+                background-repeat: no-repeat;
+                background-size: cover;
             }
         </style>
     </form>
