center form & add uefest logo

--- a/UnrealFest/views/index.html
+++ b/UnrealFest/views/index.html
@@ -6,14 +6,23 @@
 </head>
 
 <body>
+    <img src="/images/uefest_logo.svg" alt="unreal fest logo" class="top-left-image">
     <form class="form" id="loginForm">
         <div class="container">
             <img src="/images/title_login.svg" alt="Centered Image">
         </div>
         <input class="rounded-textfield" type="text" id="login" name="login" required><br><br>
+        <p style="font-size: 32px; font-family: Helvetica;color:white; margin-top: 2%;margin-bottom: 2%;">Enter your login</p>
         <button class="validate-button" type="submit"></button>
     </form>
         <style>
+        .top-right-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100px; /* Adjust the size as needed */
+            height: auto;
+        }
          .background-image-container {
             height: 100%;
             margin: 0;
