--- a/UnrealFest/views/index.html
+++ b/UnrealFest/views/index.html
@@ -44,6 +44,7 @@
             top: 0;
             left: 0;
             width: 150px;
+            margin-top: 50px;
             /* Default size */
             height: auto;
         }
